--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ text-align:center;
 font-weight:bold;
 }
 body{
-background:black;
+background:white;
 }
 h2{
 background-color:#9C9AA4;
@@ -57,8 +57,22 @@ height:100%;
 width:100%;
 height:100%;
 }
-mg {
+img {
     vertical-align: middle;
     border-style: none;      width: 100%;
     height: 100%;
+}
+.social-icons{
+
+margin-top:40px;
+color:white;
+
+}
+a{
+	color:white;
+	
+}
+p{
+	color:white;
+	
 }
