nauman made changes

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -1,27 +1,27 @@
 <div class="container-fluid">
-			<nav class="navbar navbar-expand-lg navbar-light ">
+			<nav class="navbar navbar-expand-lg ">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-					<a class="navbar-brand" href="#">exclusivewallcovering</a>
-					<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-						<li class="nav-item active">
-							<a class="nav-link" href="home.php">HOME <span class="sr-only">(current)</span></a>
+					<a class="navbar-brand" href="home.php">exclusive wallcovering</a>
+					<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+						<li id="home" class="nav-item active">
+							<a class="nav-link" href="home.php">HOME </a>
 						</li>
-						<li class="nav-item">
+						<li id="about" class="nav-item">
 							<a class="nav-link" href="about.php">ABOUT</a>
 						</li>
-						<li class="nav-item">
+						<li id="services" class="nav-item">
 							<a class="nav-link " href="services.php">SERVICES</a>
 						</li>
-						<li class="nav-item">
+						<li id="photography" class="nav-item">
 							<a class="nav-link" href="photography.php">PHOTOGRAPHY</a>
 						</li>
-						<li class="nav-item">
+						<li id="latest-news" class="nav-item">
 							<a class="nav-link " href="latest-news.php">LATEST NEWS</a>
 						</li>
-						<li class="nav-item">
+						<li id="contact-us.php" class="nav-item">
 							<a class="nav-link " href="contact us.php">CONTACT US</a>
 						</li>
 					</ul>
