--- a/style.css
+++ b/style.css
@@ -76,3 +76,9 @@ p{
 	color:white;
 	
 }
+.navbar-brand{
+padding-left:20px !important;
+}
+    .navbar-expand-lg .navbar-collapse {
+      padding-left: 20px;
+    }
