--- a/menu.css
+++ b/menu.css
@@ -8,3 +8,15 @@ padding-left:20px !important;
     background-color: #e9e9e9;
     color: black;
 }
+.navbar-expand-lg .navbar-collapse {
+    padding: 0px;
+}
+.navbar-expand-lg {
+    padding: 0px;
+    }
+body > .container1 {
+    padding: 0px;
+}
+.navbar-expand-lg .navbar-collapse {
+    background-color: #4267B2;
+}
