--- a/menu.css
+++ b/menu.css
@@ -5,8 +5,8 @@ padding-left:20px !important;
       padding-left: 20px;
     }
 .active .nav-link {
-    background-color: #e9e9e9;
-    color: black;
+    background-color: #003F87;
+    color: white;
 }
 .navbar-expand-lg .navbar-collapse {
     padding: 0px;
